--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,2 +1,3 @@
 cucumber.execution.parallel.enabled=true
 cucumber.publish.quiet=true
+cucumber.plugin=pretty, json:target/cucumber-report.json, html:target/cucumber-report.html
